# optional-homework

./: CMakeLists.txt  README.md  gitignore  main.cpp  pizza.cpp  pizza.h
.github/workflows/: c-cpp.yml
